--- a/README.Rmd
+++ b/README.Rmd
@@ -13,12 +13,16 @@ knitr::opts_chunk$set(
 )
 ```
 
-# denguedatahub <img src="hexsticker/logo.png" align="right" height="200"/>
+# denguedatahub <img src="hexsticker/logo.png" align="right" height="180"/>
 
 <!-- badges: start -->
 <!-- badges: end -->
 
 The goal of denguedatahub is to provide the research community with a unified dataset by collecting worldwide dengue-related data, merged with exogenous variables helpful for a better understanding of the spread of dengue and the reproducibility of research.
+
+![](hexsticker/profile.png)
+
+Check out the website at https://denguedatahub.netlify.app/
 
 ## Installation
 
