--- a/README.Rmd
+++ b/README.Rmd
@@ -15,10 +15,7 @@ knitr::opts_chunk$set(
 
 # denguedatahub <img src="hexsticker/logo.png" align="right" height="180"/>
 
-<!-- badges: start -->
-<!-- badges: end -->
-
-The goal of denguedatahub is to provide the research community with a unified dataset by collecting worldwide dengue-related data, merged with exogenous variables helpful for a better understanding of the spread of dengue and the reproducibility of research.
+The goal of `denguedatahub` is to provide the research community with a unified dataset by collecting worldwide dengue-related data, merged with exogenous variables helpful for a better understanding of the spread of dengue and the reproducibility of research.
 
 ![](hexsticker/profile.png)
 
