--- a/README.Rmd
+++ b/README.Rmd
@@ -50,6 +50,77 @@ head(level_of_risk)
 
 ```{r}
 head(srilanka_weekly_data)
+library(ggplot2)
+library(viridis)
+library(dplyr)
+ggplot(
+  filter(srilanka_weekly_data, year < 2019 & year > 2012),
+  aes(
+    x = week,
+    y = district,
+    fill = cut(
+      cases,
+      breaks = c(0, 50, 100, 200, Inf),
+      labels = c("0–50", "50–100", "100–200", ">200"),
+      include.lowest = TRUE,
+      right = FALSE
+    )
+  )
+) +
+  geom_tile(color = "white") +
+  scale_fill_viridis_d(
+    option = "C",
+    name = "Dengue Cases"
+  ) +
+  facet_wrap(~year, ncol = 3) +
+  labs(
+    title = "Weekly Dengue Cases by District in Sri Lanka (2012–2019)",
+    x = "Week Number",
+    y = "District"
+  ) +
+  theme_minimal(base_size = 12) +
+  theme(
+    axis.text.x = element_text(angle = 90, hjust = 1, size = 6),
+    axis.text.y = element_text(size = 7),
+    legend.position = "bottom",
+    strip.text = element_text(size = 9)
+  )
+
+
+ggplot(
+  filter(srilanka_weekly_data, year > 2019),
+  aes(
+    x = week,
+    y = district,
+    fill = cut(
+      cases,
+      breaks = c(0, 50, 100, 200, Inf),
+      labels = c("0–50", "50–100", "100–200", ">200"),
+      include.lowest = TRUE,
+      right = FALSE
+    )
+  )
+) +
+  geom_tile(color = "white") +
+  scale_fill_viridis_d(
+    option = "C",
+    name = "Dengue Cases"
+  ) +
+  facet_wrap(~year, ncol = 3) +
+  labs(
+    title = "Weekly Dengue Cases by District in Sri Lanka (2020–2025)",
+    x = "Week Number",
+    y = "District"
+  ) +
+  theme_minimal(base_size = 12) +
+  theme(
+    axis.text.x = element_text(angle = 90, hjust = 1, size = 6),
+    axis.text.y = element_text(size = 7),
+    legend.position = "bottom",
+    strip.text = element_text(size = 9)
+  )
+
+
 ```
 
 ## World
