--- a/README.Rmd
+++ b/README.Rmd
@@ -50,9 +50,44 @@ head(level_of_risk)
 
 ```{r}
 head(srilanka_weekly_data)
+```
+
+```{r}
 library(ggplot2)
 library(viridis)
 library(dplyr)
+
+country_weekly <- srilanka_weekly_data |>
+  group_by(year, week, start.date) %>%
+  summarise(total_cases = sum(cases, na.rm = TRUE), .groups = 'drop') |>
+  arrange(start.date)
+
+country_weekly <- country_weekly |> 
+  mutate(
+         yearweek = yearweek(start.date)) |>
+  distinct(yearweek, .keep_all = TRUE) 
+
+country_weekly_tsibble <- country_weekly |>
+  as_tsibble(index = yearweek)
+
+p1 <- ggplot(country_weekly_tsibble, aes(x = yearweek, y = total_cases)) +
+  geom_line() +
+  scale_x_yearweek(date_breaks = "1 year", date_labels = "%Y") +
+  labs(
+    x = "Year",
+    y = "Weekly Dengue Cases"
+  ) +
+  theme_minimal() +
+  theme(
+    axis.text.x = element_text(angle = 45, hjust = 1),
+    plot.title = element_text(face = "bold")
+  )
+p1
+```
+
+
+```{r}
+
 ggplot(
   filter(srilanka_weekly_data, year < 2019 & year > 2012),
   aes(
